# clang-wrap

./: .gitignore  Cargo.toml  Makefile  README.md  testdeb.sh
src/: install.rs  lib.rs  main.rs
test/test_binary/: Makefile  test_multi_a.c
test/test_shared/: Makefile  libadd.c  libadd.h  libadd.version  libaddf.c  main.c
tests/: wrapper_behaviour.rs
